@@ -72,7 +72,7 @@ public class TestJmxMonitoredMap extends LuceneTestCase {
         }
         String url = "service:jmx:rmi:///jndi/rmi://:" + port + "/solrjmx";
         JmxConfiguration config = new JmxConfiguration(true, null, url, null);
-        monitoredMap = new JmxMonitoredMap<String, SolrInfoMBean>(null, config);
+        monitoredMap = new JmxMonitoredMap<String, SolrInfoMBean>("", "", config);
         JMXServiceURL u = new JMXServiceURL(url);
         connector = JMXConnectorFactory.connect(u);
         mbeanServer = connector.getMBeanServerConnection();
